# markov-algos

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  analyze.py  convergence_results.txt  main.cpp  pyproject.toml  run.bat  vcpkg-configuration.json  vcpkg.json
include/markov_chains/: metro_hastings.h
include/metropolis_hastings/: diagnostics.h  metro_hastings.h  model.h  proposal.h  proposer.h  sampler.h  target.h
src/: diagnostics.cpp  metro_hastings.cpp  proposal.cpp  proposer.cpp  sampler.cpp  target.cpp
